# tictactoe

./: .gitignore  .releaserc  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_tictactoe.py
tictactoe/: tictactoe.py
