[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = "A simple tic-tac-toe game in Python"
authors = ["Arkar Min Aung <arica.aung@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pyinstaller = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.9.0"
python-semantic-release = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.1.7"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "tictactoe/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"